--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
 				<div class="carousel-item crs-img-1 active">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-left">
-							<div>
-								<h2 class="display-4 text-light"><span class="emboss2">Who we are</span></h2>
-							</div>
-							<p class="lead ">
-								<span class="emboss">Our core Philosophy defines us. Find out more.</span>
-							</p>
-							<a href="OurPhilosophy.html" class="btn btn-success">Read More</a>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -65,6 +59,19 @@
 						</div>
 					</div>
 				</div>
+				<div class="carousel-item crs-img-4">
+					<div class="container">
+						<div class="carousel-caption pb-5 mb-5 text-left">
+							<div>
+								<h2 class="display-4 text-light"><span class="emboss2">Who we are</span></h2>
+							</div>
+							<p class="lead ">
+								<span class="emboss">Our core Philosophy defines us. Find out more.</span>
+							</p>
+							<a href="OurPhilosophy.html" class="btn btn-success">Read More</a>
+						</div>
+					</div>
+				</div>
 			</div>
 			<a href="#myCarousel" class="carousel-control-prev" data-slide="prev">
 				<span class="carousel-control-prev-icon"></span>
@@ -87,7 +94,6 @@
 					<a target="_blank" href="/img/Easter_2023_details_1.png">
 						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
 					</a>
-
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
@@ -100,7 +106,7 @@
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>April Easter Holiday registration</h3>
 					<p class="lead mt-2">Click below. Places are filling fast!</p>
-					<a target="_blank" href="RegisterNow.html">
+					<a target="_blank" href="register.html">
 						<img src="/img/register.png" alt="Forest" style="width:150px">
 					</a>
 
