--- a/navbar.html
+++ b/navbar.html
@@ -1,16 +1,18 @@
 <!-- Navbar Section Start -->
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
+<nav class="navbar navbar-expand-lg navbar-light py-0" style="background-color: #4274AD;"
   uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-  <div class="container">
+  <div class="container ">
     <a href="index.html" class="navbar-brand">
-      <img src="./img/logo-long.png" class="img-fluid p-0" style="height: 40px; ">
+      <img src="./img/logos/AssetsMan.png" class="img-fluid p-0" style="height: 40px; ">
+      <img src="./img/logos/AssetsTitle.png" class="img-fluid p-0" style="height: 40px; ">
+      <!-- <object data="./img/logos/AssetsMan.svg" type="image/svg+xml"></object> -->
       <!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
     </a>
     <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navBar">
-      <ul class="navbar-nav  ml-auto ">
+      <ul class="navbar-nav ">
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -21,7 +23,7 @@
             <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
             <a class="dropdown-item" href="Highlights.html">Training Videos</a>
-            <a class="dropdown-item" href="RegisterNow.html">Register Now</a>
+            <a class="dropdown-item" href="register.html">Register Now</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -47,7 +49,7 @@
           <a class="nav-link" href="TOS.html">Terms and Conditions</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="text-shadow: 2px 2px 2px #41B8FC;" href="RegisterNow.html"><b>Register
+          <a class="nav-link" style="background-color: rgba(255, 215, 0, 0.5);" href="register.html"><b>Register
               Now</b></a>
         </li>
       </ul>
