cleaned up images

--- a/TOS.html
+++ b/TOS.html
@@ -19,7 +19,6 @@
 	<div id="nav-placeholder"></div>
 	<!-- Nav Section End -->
 
-
 	<!-- About Section Start -->
 	<section id="about" class="text-center py-5 text-light">
 		<div class="inner-overlay">
@@ -292,7 +291,8 @@
 						<li>Never look to have a conversation with a coach on the pitch at training – the training field is for
 							coaches and players only.</li>
 						<li>Similarly, straight after sessions is not an appropriate place or time to have a private discussion,
-							<b>especially if emotions are high.</b></li>
+							<b>especially if emotions are high.</b>
+						</li>
 						<li>A 24 hour “cool down” period before formulating a complaint is requested.</li>
 						<li>Correspondence via email or phone call outside of training hours is highly
 							recommended.</li>
