--- a/navbar.html
+++ b/navbar.html
@@ -3,8 +3,8 @@
   uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
   <div class="container ">
     <a href="index.html" class="navbar-brand">
-      <img src="./img/logos/AssetsMan.png" class="img-fluid p-0" style="height: 40px; ">
-      <img src="./img/logos/AssetsTitle.png" class="img-fluid p-0" style="height: 40px; ">
+      <img src="./img/AssetsMan.png" class="img-fluid p-0" style="height: 40px; ">
+      <img src="./img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px; ">
       <!-- <object data="./img/logos/AssetsMan.svg" type="image/svg+xml"></object> -->
       <!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
     </a>
