--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -61,7 +61,7 @@
 
 				</div>
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/soccer8.jpg" class="img-fluid">
+					<img src="img/stock8.jpg" class="img-fluid">
 				</div>
 			</div>
 		</div>
@@ -96,7 +96,7 @@
 			<div class="row">
 
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/kids3-min.jpg" class="img-fluid">
+					<img src="img/stock7.jpg" class="img-fluid">
 				</div>
 
 				<div class="col-lg-6 col-md-6  align-self-center">
@@ -115,7 +115,7 @@
 				<div class="row">
 
 					<div class="col-lg-6 col-md-6 align-self-center text-center">
-						<img src="img/soccer1.jpg" class="img-fluid ">
+						<img src="img/stock9.jpg" class="img-fluid ">
 					</div>
 
 					<div class="col-lg-6 col-md-6  align-self-center">
@@ -226,13 +226,13 @@
 				</div>
 
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/kidschill.jpg" class="img-fluid">
+					<img src="img/stock4.jpg" class="img-fluid">
 				</div>
 
 				<div class="row">
 
 					<div class="col-lg-6 col-md-6 align-self-center text-center">
-						<img src="img/football4-min.jpg" class="img-fluid">
+						<img src="img/stock5.jpg" class="img-fluid">
 					</div>
 
 					<div class="col-lg-6 col-md-6  align-self-center">
