--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Fast Approaching!</h3>
 					<p class="lead mt-2">April Easter School Holidays 2023. Find out more below.</p>
-					<a target="_blank" href="/img/Easter_2023_details_1.png">
-						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
+					<a target="_blank" href="./img/Easter_2023_details_1.png">
+						<img src="./img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
@@ -107,7 +107,7 @@
 					<h3>April Easter Holiday registration</h3>
 					<p class="lead mt-2">Click below. Places are filling fast!</p>
 					<a target="_blank" href="register.html">
-						<img src="/img/register.png" alt="Forest" style="width:150px">
+						<img src="./img/register.png" alt="Forest" style="width:150px">
 					</a>
 
 				</div>
