more changes trying to fix scrolling

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <div class="container" style="max-width:100%">
     <div class="row" style="margin-bottom:10px">
       <div class="col">
-        <h6 class="display-5 mb-0 text-light"> <img src="./img/logo-nobg.png" class="img-fluid p-0"
+        <h6 class="display-5 mb-0 text-light"> <img src="./img/android-chrome-512x512.png" class="img-fluid p-0"
             style="height: 40px; "> FOOT AND BALL ACADEMY </h2>
       </div>
     </div>
