--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -21,7 +21,7 @@
 
 	<!-- Slider Section Start -->
 	<section id="slider" class="bg-dark">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li class="active" data-slide-to="0" data-target="#myCarousel"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
