--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -53,7 +53,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/back.jpg" class="img-fluid w-50 h-70 rounded-circle">
+					<img src="img/stock6.jpg" class="img-fluid w-50 h-70 rounded-circle">
 				</div>
 			</div>
 		</div>
