--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 	<section id="about-info">
 		<!-- <div class="iframe-container"> -->
 
-		<iframe width="100%" height="3500px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; overflow: auto!important; -webkit-overflow-scrolling: touch!important; position:absolute;" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen scrolling="auto"> </iframe> 
+		<iframe width="100%" height="3500px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; overflow: auto!important; -webkit-overflow-scrolling: touch!important;" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen scrolling="auto"> </iframe> 
 
 		<!-- </div> -->
 		</section>
