made new button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<p>
 								<span class="emboss">Find out what motivates our coaches. Put names to faces!</span>
 							</p>
-							<a href="Staff.html" class="btn btn-warning">Read More</a>
+							<a href="Staff.html" class="btn btn-info">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -68,7 +68,7 @@
 							<p class="lead ">
 								<span class="emboss">Our core Philosophy defines us. Find out more.</span>
 							</p>
-							<a href="OurPhilosophy.html" class="btn btn-success">Read More</a>
+							<a href="OurPhilosophy.html" class="btn btn-info">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded
-						in the Hawkesbury, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
+						in the Hawkesbury, NSW, we specialise in small group as well as 1 on 1 soccer training programs.</p>
 
 				</div>
 				<div class="col-lg-4 col-md-4">
