--- a/navbar.html
+++ b/navbar.html
@@ -49,7 +49,7 @@
           <a class="nav-link" href="TOS.html">Terms and Conditions</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="background-color: rgba(255, 215, 0, 0.5);" href="register.html"><b>Register
+          <a class="btn btn-warning" href="register.html"><b>Register
               Now</b></a>
         </li>
       </ul>
