--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,9 +27,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1>
+						<h1 class="text-light">Private Session</h1>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
+							Find out about our Private Sessions below.
 						</p>
 					</div>
 				</div>
@@ -41,21 +42,74 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
+				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
+						We offer a variety of accessible training sessions outside of our CORE school term programs.</p>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
-				</div>
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/stock6.jpg" class="img-fluid w-50 h-70 rounded-circle">
+						These sessions are customised to suit the requirements of the client and their specific training needs.</p>
+						<h4>We are reasonably flexible in our delivery of these sessions, 
+						and if enough planning is communicated, may also travel off site to host specific sessions.</h4>
+					<p class="lead">
+						Below are a list of our sessions and what we offer:</p>
+
+					<h3> Group training session </h3>
+					<p class="lead">
+						This works best with 3+ players that want a private session. This allows us to devise a wider variety of exercises including more 
+						dynamic passing sequences as well as the traditional individually based exercises. 
+						We customise these sessions to the desires of the client(s), and can expand to include plyometrics, and fast feet.</p>
+					<p></p>
+					<ul>
+						<li>Age Category: Open to all ages.</li>
+						<li>Suggested Focus: 13+ years old.</li>
+						<li>Price: $100 per hour.</li>
+					</ul>
+
+					<h3>1 on 1 or 1 on 2 focus session</h3>
+					<p class="lead">
+						The traditional 1 on 1 or 1 on 2 sessions, focusing on a high-intensity footballing workout. Customised to the client’s needs, the session 
+						focuses on a balance between technical improvement as well as increases in fitness and concentration through high-intensity ball-related exercises.</p>
+					<p></p>
+					<ul>
+						<li>Age Category: Open to all ages.</li>
+						<li>Suggested Focus: 13+ years old.</li>
+						<li>Price: $100 per hour.</li>
+					</ul>
+
+					<h3>Team Sessions</h3>
+					<p class="lead">
+						Providing the timing does not clash with our School Terms Programs and your club is ok with it (please check!), 
+						we also offer consultation on team training sessions. 
+						This might be for a team that is coach-less, or wanting to improve on their session structure or get in a different style session. 
+						We are open to the clients needs!</p>
+						<p></p>
+					<ul>
+						<li>Age Category: Open to all ages.</li>
+						<li>Suggested Focus: 13+ years old.</li>
+						<li>Price: $100 per hour.</li>
+					</ul>
+					
+					<h3>Coaching Courses (Coming Soon)</h3>
+					<p class="lead">
+						In light of the wealth of knowledge on proper youth player development currently flooding out of Europe online, 
+						Foot and Ball Academy will be releasing a short course for Parents (more than likely) who have by one way, 
+						or another come to be the coach of their kids local team. Perhaps lacking confidence, or unsure of proper expectations, 
+						or would like some simple philosophical guidelines when approaching the season, this course will include a background of why you are the coach, 
+						the (real) incentive structure of Football in Australia, and some simple easy-to-digest philosophical guidelines all of which are designed to 
+						ensure the kids grow up in a healthy footballing environment.</p>
+						<p></p>
+					<ul>
+						<li>Age Category: Open to all ages.</li>
+						<li>Suggested Focus: Coaches from U/5's through to U/11's</li>
+						<li>Price: TBC.</li>
+					</ul>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12  align-self-center">
+					<a href="register.html" class="btn btn-warning" role="button">Click Here to Register</a>
+				</div>
+			</div>
+
 		</div>
 	</section>
 	<!-- About Info Section End -->
@@ -63,66 +117,7 @@
 	<!-- About Services Section Start -->
 	<section id="about-services" class="py-5 text-light
 	text-center bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-envelope"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-danger ">
-						<div class="card-body">
-							<i class="fas fa-car"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-play"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-info ">
-						<div class="card-body">
-							<i class="fas fa-cart-plus"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-tree"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-history"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 	</section>
 	<!-- About Services Section End-->
 
@@ -131,7 +126,6 @@
 
 	</section>
 	<!-- About Testimonial Section End -->
-
 
 	<!-- Footer Section Start -->
 	<div id="foot-placeholder"></div>
@@ -142,8 +136,9 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/uikit.min.js"></script>
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function(){$("#nav-placeholder").load("navbar.html");});</script>
-	<script>$(function(){$("#foot-placeholder").load("footer.html");});</script>
+	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
+	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
 
 </body>
+
 </html>
