--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -26,9 +26,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1>
+						<h1 class="text-light">Special Programs</h1>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
+							We run private sessions and special holiday programs.
 						</p>
 					</div>
 				</div>
@@ -42,89 +42,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
+					<h1>Private Sessions</h1>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
+						Details coming soon!
 					</p>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
+						In the meantime register for our Holiday program!
 					</p>
 				</div>
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/stock6.jpg" class="img-fluid w-50 h-70 rounded-circle">
+					<img src="img/stock6.jpg" class="img-fluid w-50 h-70">
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- About Info Section End -->
-
-	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
-	text-center bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-envelope"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-danger ">
-						<div class="card-body">
-							<i class="fas fa-car"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-play"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-info ">
-						<div class="card-body">
-							<i class="fas fa-cart-plus"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-tree"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-history"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Services Section End-->
 
 	<!-- About Testimonial Section Start -->
 	<section id="about-testimonial" class="py-5">
