--- a/Staff.html
+++ b/Staff.html
@@ -75,7 +75,7 @@
 		<p class="lead">
 			(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
 		<p class="lead">
-			(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
+			(2013-2016) University Lecturer and Tutor. During post-graduate studies, taught complex technical topics to undergraduates and industry professionals. Class preparation, content design and delivery, solicting of feedback, all to a wide cohort of students with different backgrounds and goals.
 		<p class="lead">
 			(2022 – current) Kids soccer-football coach.</p> 
 
