--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -47,8 +47,11 @@
 						We offer a variety of accessible training sessions outside of our CORE school term programs.</p>
 					<p class="lead">
 						These sessions are customised to suit the requirements of the client and their specific training needs.</p>
-						<h4>We are reasonably flexible in our delivery of these sessions, 
-						and if enough planning is communicated, may also travel off site to host specific sessions.</h4>
+					<p class="lead">
+						We are reasonably flexible in our delivery of these sessions, 
+						and if enough planning is communicated, may also travel off site to host specific sessions.</p>
+					<h4>A general notice: At this early stage of our journey, we do not currently have access to full sized goals. 
+						Therefore, shooting exercises that involve a proper game-like finish are unavailable at our current location.</h4>
 					<p class="lead">
 						Below are a list of our sessions and what we offer:</p>
 
