testing out this style

--- a/navbar.html
+++ b/navbar.html
@@ -49,8 +49,7 @@
           <a class="nav-link" href="TOS.html">Terms and Conditions</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-warning" href="register.html"><b>Register
-              Now</b></a>
+          <a class="btn btn-warning" href="register.html"><b>Register Now</b></a>
         </li>
       </ul>
     </div>
