--- a/register.html
+++ b/register.html
@@ -19,11 +19,57 @@
 	<div id="nav-placeholder"></div>
 	<!-- Nav Section End -->
 
+		<!-- About Section Start -->
+		<section id="about" class="text-center py-5 text-light">
+			<div class="inner-overlay">
+				<div class="container">
+					<div class="row">
+						<div class="col mt-5 pt-4">
+							<h1 class="text-light">Register</h1>
+							<p class="lead">
+								Register for one of our programs below. 
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- About Section End -->
+
 	<!-- Info Section Start -->
 	<section id="about-info">
 		<!-- <div class="iframe-container"> -->
 
-		<iframe width="100%" height="3500px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; overflow: auto!important; -webkit-overflow-scrolling: touch!important;" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen scrolling="auto"> </iframe> 
+			<div class="container p-5">
+				<div class="row">
+					<div class="col-md-6 mb-3">
+
+						Register for our Easter program is a drop in session. Get some Holiday action now!
+
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Easter 2023</b></a>
+
+		</div>
+		<div class="col-md-6 mb-3">
+
+			Our next School Term runs from April-July 2023. Register for the 10 week program.
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for School Term 2 2023</b></a>
+
+		</div>
+		<div class="col-md-6 mb-3">
+
+			Mix up your team's session with special group sessions.
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Private Group Sessions</b></a>
+
+		</div>
+		<div class="col-md-6 mb-3">
+
+			Looking for 1-on-1 private development? Book one or more sessions!
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Private 1-on-1 Session</b></a>
+
+		</div>
+	</div>
+</div>
+			
 
 		<!-- </div> -->
 		</section>
@@ -31,7 +77,8 @@
 
 
 	<!-- Footer Section Start -->
-	<div id="foot-placeholder"></div>
+	<div id="foot-placeholder" style="position: fixed;
+	bottom: 0; width:100%"></div>
 	<!-- Footer Section Start -->
 
 	<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
