--- a/register.html
+++ b/register.html
@@ -77,8 +77,7 @@
 
 
 	<!-- Footer Section Start -->
-	<div id="foot-placeholder" style="position: fixed;
-	bottom: 0; width:100%"></div>
+	<div id="foot-placeholder" style="margin-top: 20vh;"></div>
 	<!-- Footer Section Start -->
 
 	<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
