--- a/register.html
+++ b/register.html
@@ -44,27 +44,27 @@
 				<div class="row">
 					<div class="col-md-6 mb-3">
 
-						Register for our Easter program is a drop in session. Get some Holiday action now!
+						Register for our Easter casual sessions. <br>Get some Holiday action now!
 
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Easter 2023</b></a>
-
-		</div>
-		<div class="col-md-6 mb-3">
-
-			Our next School Term runs from April-July 2023. Register for the 10 week program.
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for School Term 2 2023</b></a>
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Click Here for <br> Easter Holiday Registration</b></a>
 
 		</div>
 		<div class="col-md-6 mb-3">
 
-			Mix up your team's session with special group sessions.
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Private Group Sessions</b></a>
+			Our next School Term program runs from April-July 2023. <br>Register for the 10 week program.
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>Click Here for <br> TERM 2 2023 Registration </b></a>
+
+		</div>
+		<div class="col-md-6 mb-3">
+
+			Mix up your team's training goals with special group sessions.
+			<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank" href="https://..."><b>Coming <br>Soon</b></a>
 
 		</div>
 		<div class="col-md-6 mb-3">
 
 			Looking for 1-on-1 private development? Book one or more sessions!
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Register for Private 1-on-1 Session</b></a>
+			<a class="btn btn-info btn-block disabled"  role="button" aria-disabled="true" target="_blank" href="https://..."><b>Coming <br>Soon</b></a>
 
 		</div>
 	</div>
