--- a/Privacy.html
+++ b/Privacy.html
@@ -28,7 +28,8 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Privacy</h1>
 						<p class="lead">
-							Find our Privacy Statement below.
+							At Foot and Ball Academy, we are committed to protecting the privacy and confidentiality of our customers' personal information. 
+						We understand the importance of your privacy and are committed to complying with the Australian Privacy Principles set out in the Privacy Act 1988.
 						</p>
 					</div>
 				</div>
@@ -42,8 +43,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<p>At Foot and Ball Academy, we are committed to protecting the privacy and confidentiality of our customers' personal information. 
-						We understand the importance of your privacy and are committed to complying with the Australian Privacy Principles set out in the Privacy Act 1988.</p>
 					<p>This privacy statement outlines how we collect, use, disclose, store, and protect your personal information, including any sensitive information, such as health or financial information. 
 						By providing us with your personal information, you consent to us collecting, using, disclosing, and storing your information in accordance with this statement.</p>
 					<h3>Collection of Personal Information</h3>
@@ -75,8 +74,7 @@
 					
 					<h3>Access and Correction of Personal Information</h3>
 					<p>You have the right to access and correct your personal information held by us, subject to certain exceptions 
-						provided by law. If you wish to access or correct your personal information, please contact us using the details provided below.</p>
-					<p>If you have any questions or concerns about our privacy practices or wish to make a complaint about a breach of your privacy rights, 
+						provided by law. If you have any questions or concerns about our privacy practices, wish to access or correct your personal information, or wish to make a complaint about a breach of your privacy rights, 
 						please contact us using the following details:</p>
 					<p></p>
 					<ul>
