--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -29,7 +29,10 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">School Term Programs</h1>
 						<p class="lead">
-							Find out about School Term programs below.
+							Our core programs run according to the school terms. 10-week ‘curriculums’ designed to afford us the time to
+						build towards better long-term player development.
+						These programs give us the opportunity to get to know the player and better identify their strengths and
+						weaknesses with the ball.
 						</p>
 					</div>
 				</div>
@@ -43,11 +46,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<p class="lead">
-						Our core programs run according to the school terms. 10-week ‘curriculums’ designed to afford us the time to
-						build towards better long-term player development.
-						These programs give us the opportunity to get to know the player and better identify their strengths and
-						weaknesses with the ball.</p>
 					<p class="lead">
 						A typical curriculum will cover core topics plus combinations of each. E.g., dribbling, ball mastery,
 						shooting, etc. Followed by dribbling AND ball mastery, dribbling AND shooting, etc.</p>
