--- a/Staff.html
+++ b/Staff.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Staff</h1>
 						<p class="lead">
-							Find our indvidual Staff Profiles below.
+							Knowledgable and enthusiastic trainers.
 						</p>
 					</div>
 				</div>
@@ -45,50 +45,56 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-				<p class="lead">
-					My background and pathway into soccer coaching is rather unorthodox. 
-						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. 
-						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
-						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, 
-						and never received in my youth. e.g. improvment over winning. </p> 
+					<p class="lead">
+						My background and pathway into soccer coaching is rather unorthodox.
+						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my
+						player experiences to coaching.
+						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this,
+						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is
+						important,
+						and never received in my youth. e.g. improvment over winning. </p>
 					<h2>Playing History (2000 – 2011)</h2>
-			<p class="lead">
-				Representative football (now NPL) from U/13’s. </p>
-			<p class="lead">
-				U/13’s – U/15’s – Hawkesbury City FC.</p>
-			<p class="lead">
-				U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p> 
-			<p class="lead">
-				U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
-			<p class="lead">
-				(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). 
-				Friendly non-league matches against Staines, Rochdale, Reading, etc.</p> 
-			<p class="lead">
-				(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p> 
-			<p class="lead">
-				(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p> 
-			<p class="lead">
-				(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p> 
-			<p class="lead">
-				(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.</p>  
-					<h2>Teacher History</h2> 
-		<p class="lead">
-			(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
-		<p class="lead">
-			(2013-2016) University Lecturer and Tutor. During post-graduate studies, taught complex technical topics to undergraduates and industry professionals. Class preparation, content design and delivery, solicting of feedback, all to a wide cohort of students with different backgrounds and goals.
-		<p class="lead">
-			(2022 – current) Kids soccer-football coach.</p> 
+					<p class="lead">
+						Representative football (now NPL) from U/13’s. </p>
+					<p class="lead">
+						U/13’s – U/15’s – Hawkesbury City FC.</p>
+					<p class="lead">
+						U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p>
+					<p class="lead">
+						U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
+					<p class="lead">
+						(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and
+						Melwood (Liverpool).
+						Friendly non-league matches against Staines, Rochdale, Reading, etc.</p>
+					<p class="lead">
+						(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p>
+					<p class="lead">
+						(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p>
+					<p class="lead">
+						(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p>
+					<p class="lead">
+						(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting,
+						plyometrics, etc.</p>
+					<h2>Teacher History</h2>
+					<p class="lead">
+						(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
+					<p class="lead">
+						(2013-2016) University Lecturer and Tutor. During post-graduate studies, taught complex technical topics to
+						undergraduates and industry professionals. Class preparation, content design and delivery, solicting of
+						feedback, all to a wide cohort of students with different backgrounds and goals.
+					<p class="lead">
+						(2022 – current) Kids soccer-football coach.</p>
 
-						</p>
-						<h2>Qualifications</h2>
-        
-            <ul class="a">
-              <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
-              <li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
-              <li> <a href="./img/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</a></li>
-            </ul>
-          </div>
-				
+					</p>
+					<h2>Qualifications</h2>
+
+					<ul class="a">
+						<li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
+						<li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
+						<li> <a href="./img/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</a></li>
+					</ul>
+				</div>
+
 				<div class="col-lg-6 col-md-6 align-self-top text-center">
 					<img src="img/nick.jpg" class="img-fluid w-50 h-60 rounded-circle">
 				</div>
@@ -100,7 +106,7 @@
 	<!-- About Services Section Start -->
 	<section id="about-services" class="py-5 text-light
 	text-center bg-dark">
-		
+
 	</section>
 	<!-- About Services Section End-->
 
@@ -119,8 +125,9 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/uikit.min.js"></script>
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function(){$("#nav-placeholder").load("navbar.html");});</script>
-	<script>$(function(){$("#foot-placeholder").load("footer.html");});</script>
+	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
+	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
 
 </body>
+
 </html>
