--- a/ContactUs.html
+++ b/ContactUs.html
@@ -44,7 +44,7 @@
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<i class="fa fa-map-marker" style="width:30px"></i> Owen Earle Oval, 23 Bensons Ln, Richmond Lowlands NSW 2753, NSW<br>
 					<i class="fa fa-phone" style="width:30px"></i> Phone: +61452583279<br>
-					<i class="fa fa-envelope" style="width:30px"> </i> Email: mail@footandball.com.au<br>
+					<i class="fa fa-envelope" style="width:30px"> </i> Email: mail@footandball.com.au and footandballacademy@outlook.com<br>
 					<a href="https://www.instagram.com/footandballacademy/"><i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy<br></a>
 					<a href="https://www.facebook.com/100090119914421"><i class="fab fa-facebook-f" style="width:30px"> </i> Foot-And-Ball-Academy<br></a>
 
