trying to optimise

--- a/Location.html
+++ b/Location.html
@@ -61,17 +61,17 @@
 						1) Turn on to Bensons Lane off Francis Street.
 					</p>
 					<p></p>
-					<img src="img/Google_Street_1.png" class="img-fluid">
+					<img src="img/Google_Street_1.jpg" class="img-fluid">
 					<p class="lead">
 						2) Travel along until you approach the expansive car park.
 					</p>
 					<p></p>
-					<img src="img/Google_Street_2.png" class="img-fluid">
+					<img src="img/Google_Street_2.jpg" class="img-fluid">
 					<p class="lead">
 						3) Notice the yellow and green sign burried in the trees. Turn in, then veer left.
 					</p>
 					<p></p>
-					<img src="img/Google_street_3.png" class="img-fluid">
+					<img src="img/Google_street_3.jpg" class="img-fluid">
 					<p class="lead">
 						Call Coach Nick on 0452 583 279 if you get lost.
 					</p>
